app/assets/stylesheets/partials/_base.sass
$one:   #e88300
$two:   #febd69
$three: #331a03
$red:   #e84700

$line-height: 1.4  // 1.4 for true normalization
$font-color: #222
$font-family: sans-serif
$font-size: 1em
//$link-color: #00e
//$link-hover-color: #06e
//$link-visited-color: #551a8b
$selected-font-color: #fff
$selected-background-color: #ff5e99
$invalid-background-color: #f0dddd

html, body
  height: 100%

body
  background: url(image_path("bg.png"))
  font-family: sans-serif
  
a
  color: $three
  font-size: 12px
  text-decoration: none
  &:hover, &:focus
    text-decoration: underline

h1, h2, h3, h4
  color: $three
  font-family: 'Lobster', sans-serif
  font-weight: normal
h2
  font-size: 36px
  +text-shadow(rgba(0, 0, 0, 0.5) 0 1px 2px)
h3
  font-size: 24px
h4
  font-size: 18px

b
  font-weight: bold

.button
  background: $two
  border: none
  color: $three
  cursor: pointer
  display: block
  font-family: Lobster
  font-size: 22px
  padding: 11px 0
  text-decoration: none
  +border-radius(2px)
  +box-shadow(rgba(0, 0, 0, 0.4) 0 5px 0)
  +text-shadow(rgba(255, 255, 255, 0.6) 0 1px 0)
  +transition(background 0.5s ease)
  &.signup
    background: url(image_path('paw.png')) no-repeat 90% 50% $two
    text-align: center
    +transition(background 0.3s ease)
    &:hover, &:focus
      background: url(image_path('paw.png')) no-repeat 92% 25% $two
  
  &:hover, &:focus
    background: $two + #111
    color: #000
    text-decoration: none
    +box-shadow(rgba(0, 0, 0, 0.7) 0 5px 0)
  &.alt
    background: $one
    color: #fff
    +box-shadow(rgba(0, 0, 0, 0.1) 0 5px 0)
    +text-shadow(rgba(0, 0, 0, 0.2) 0 1px 0)
    +transition(background 0.5s ease)
    &:hover, &:focus
      background: $three + #222
      text-decoration: none
  &.medium
    font-size: 18px
    padding: 5px 40px
  &.small
    font-size: 15px
    padding: 4px 30px
    width: auto
    +box-shadow(rgba(0, 0, 0, 0.1) 0 2px 0)
    &:active
      top: 2px
      +box-shadow(rgba(0, 0, 0, 0.1) 0 0 0)
  &:active
    position: relative
    top: 3px
    +box-shadow(rgba(0, 0, 0, 0.1) 0 2px 0)
    
.cancel
  color: $red
  font: 14px Amaranth
  padding-left: 5px
  
.delete
  background: $red
  color: #fff
  display: inline-block
  font: 12px Amaranth
  margin-top: 5px
  opacity: 0.2
  padding: 3px 15px
  +border-radius(3px)
  +box-shadow(rgba(0, 0, 0, 0.1) 0 0 3px inset)
  +text-shadow(rgba(0, 0, 0, 0.3) 0 1px 1px)
  +transition(all 1s)
  &:hover, &:focus
    opacity: 1
    text-decoration: none

